--- a/openatlas/templates/import/project_view.html
+++ b/openatlas/templates/import/project_view.html
@@ -4,34 +4,38 @@
     {{ [[_('admin'), 'admin_index'], [_('import'), 'import_index'], project.name]|crumb }}
 {% endblock %}
 {% block content %}
-<div id="tabs" class="tabs-container">
-    <ul>
-        <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
-        {% if table.rows %}
-            <li><a href="#tab-entity">{{ _('entities')|uc_first }} {{ table|format_tab_number }}</a></li>
-        {% endif %}
-    </ul>
-    <div id="tab-info">
-        {% if 'manager'|is_authorized %}
-            <div class="toolbar">
-                {{ _('edit')|button(url_for('import_project_update', id_=project.id)) }}
-                {{ _('delete')|button(url_for('import_project_delete', id_=project.id), onclick="return confirm('" + _('delete %(name)s?', name=project.name)|replace("'", "")|uc_first + "')") }}
+<div class="row">
+    <div class="col-6">
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-info">{{ _('info')|uc_first }}</a></li>
+            {% if table.rows %}
+                <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-entity">{{ _('entities')|uc_first }} {{ table|format_tab_number }}</a></li>
+            {% endif %}
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane fade show active" role="tabpanel" id="tab-info">
+                {% if 'manager'|is_authorized %}
+                    <div class="toolbar">
+                        {{ _('edit')|button(url_for('import_project_update', id_=project.id)) }}
+                        {{ _('delete')|button(url_for('import_project_delete', id_=project.id), onclick="return confirm('" + _('delete %(name)s?', name=project.name)|replace("'", "")|uc_first + "')") }}
+                    </div>
+                    <p>{{ _('new import')|uc_first }}:</p>
+                    <div class="toolbar">
+                        {{ _('source')|button(url_for('import_data', project_id=project.id, class_code='E33')) }}
+                        {% for code in config['CLASS_CODES']['event'] + config['CLASS_CODES']['actor'] %}
+                            {{ code|get_class_name|button(url_for('import_data', project_id=project.id, class_code=code)) }}
+                        {% endfor %}
+                        {{ _('place')|button(url_for('import_data', project_id=project.id, class_code='E18')) }}
+                    </div>
+                {% endif %}
+                {{ project|description }}
             </div>
-            <p>{{ _('new import')|uc_first }}:</p>
-            <div class="toolbar">
-                {{ _('source')|button(url_for('import_data', project_id=project.id, class_code='E33')) }}
-                {% for code in config['CLASS_CODES']['event'] + config['CLASS_CODES']['actor'] %}
-                    {{ code|get_class_name|button(url_for('import_data', project_id=project.id, class_code=code)) }}
-                {% endfor %}
-                {{ _('place')|button(url_for('import_data', project_id=project.id, class_code='E18')) }}
-            </div>
-        {% endif %}
-        {{ project|description }}
-    </div>
-    {% if table.rows %}
-        <div id="tab-entity">
-            {{ table.display()|safe }}
+            {% if table.rows %}
+                <div class="tab-pane fade" role="tabpanel" id="tab-entity">
+                    {{ table.display()|safe }}
+                </div>
+            {% endif %}
         </div>
-    {% endif %}
+    </div>
 </div>
 {% endblock %}
