--- a/openatlas/static/css/color.css
+++ b/openatlas/static/css/color.css
@@ -3,14 +3,11 @@
 /* Font color */
 
 body,
-tabs-container .ui-state-active a,
 .ui-widget-content,
 .ui-tabs .ui-tabs-panel,
-div.tabs-container .ui-state-active a,
 li.ui-state-active a,
 li.ui-state-active a:link,
-li.ui-state-active a:visited,
-div.tabs-container .ui-state-active a {
+li.ui-state-active a:visited {
     color: #000000;
 }
 
@@ -48,14 +45,11 @@ a,
 select,
 input[type="text"],
 .ui-widget-content .ui-state-active,
-.ui-widget-header .ui-state-active,
-div.tabs-container .ui-state-active,
-div.tabs-container .ui-state-active.ui-state-hover {
+.ui-widget-header .ui-state-active {
     background-color: #ffffff;
 }
 
-.ui-tabs .ui-tabs-panel,
-div.tabs-container .ui-widget-content {
+.ui-tabs .ui-tabs-panel {
     background-color: #f8f9fa!important;
 }
 
@@ -83,7 +77,6 @@ select {
     background-color: #e9ecef;
 }
 
-div.tabs-container table a:hover,
 table a:hover {
     color: #007bff;
     text-decoration: none;
