Admin: breadcrumb with links to tabs on index

--- a/openatlas/templates/admin/content.html
+++ b/openatlas/templates/admin/content.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title_name %} - {{ _('content')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('admin'), 'admin_index'], _(item)]|crumb }}
+    <a href="{{ url_for('admin_index') }}#tab-content">{{ _('admin')|uc_first }}</a>&nbsp;> {{ _(item)|uc_first }}
 {% endblock %}
 {% block content %}
     <form method="post">
