--- a/openatlas/templates/admin/general.html
+++ b/openatlas/templates/admin/general.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title_name %} - {{ _('admin')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('admin'), 'admin_index'], _('edit')]|crumb }}
+    <a href="{{ url_for('admin_index') }}#tab-general">{{ _('admin')|uc_first }}</a>&nbsp;> {{ _('general')|uc_first }}
 {% endblock %}
 {% block content %}
     <div class="toolbar">
