--- a/openatlas/templates/admin/check_links.html
+++ b/openatlas/templates/admin/check_links.html
@@ -1,17 +1,15 @@
 {% extends "layout.html" %}
 {% block title_name %} - {{ _('admin')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('admin'), 'admin_index'], _('check links')]|crumb }}
+    <a href="{{ url_for('admin_index') }}#tab-data">{{ _('admin')|uc_first }}</a>&nbsp;> {{ _('check links')|uc_first }}
 {% endblock %}
 {% block content %}
     <div class="toolbar">
         {{ 'Data_integrity'|manual_link }}
-        {{ _('check links')|button(url_for('admin_check_links', check='check')) }}
-        {{ _('this could take some time')|uc_first }}
     </div>
     {% if table.rows %}
         {{ table.display()|safe }}
-    {% elif check %}
-        {{ _('Congratulations, everything looks fine!') }}
+    {% else %}
+        <p>{{ _('Congratulations, everything looks fine!') }}</p>
     {% endif %}
 {% endblock %}
