--- a/openatlas/templates/admin/file.html
+++ b/openatlas/templates/admin/file.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title_name %} - {{ _('files')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('admin'), 'admin_index'], _('files')]|crumb }}
+    <a href="{{ url_for('admin_index') }}#tab-file">{{ _('admin')|uc_first }}</a>&nbsp;> {{ _('files')|uc_first }}
 {% endblock %}
 {% block content %}
     <div class="toolbar">
