--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -105,17 +105,17 @@
                 <div class="tab-pane fade" role="tabpanel" id="tab-data">
                     <h1>{{ _('data integrity checks')|uc_first }}</h1>
                     <div class="toolbar">
+                        {{ 'data_integrity'|manual_link }}
                         {{ _('orphans')|button(url_for('admin_orphans')) }}
-                        {{ _('links')|button(url_for('admin_check_links')) }}
                         {{ _('dates')|button(url_for('admin_check_dates')) }}
-                        {{ _('link duplicates')|button(url_for('admin_check_link_duplicates')) }}
                         {{ _('similar names')|button(url_for('admin_check_similar')) }}
+                        {{ _('links')|button(url_for('admin_check_links')) }}
+                        {{ _('link duplicates')|button(url_for('admin_check_link_duplicates')) }}
                     </div>
                     <h1>{{ _('data transfer')|uc_first }}</h1>
                     <div class="toolbar">
                         {{ _('import')|button(url_for('import_index')) }}
                         {% if 'manager'|is_authorized %}
-                            {{ 'API'|button(url_for('admin_api')) }}
                             {{ (_('export') + ' CSV')|button(url_for('export_csv')) }}
                             {{ (_('export') + ' SQL')|button(url_for('export_sql')) }}
                         {% endif %}
@@ -125,6 +125,7 @@
                     </div>
                     <div class="toolbar">
                         <h1>{{ 'API'|uc_first }}</h1>
+                        {{ 'API'|manual_link }}
                         {% if 'manager'|is_authorized %}
                             {{ _('edit settings')|button(url_for('admin_api')) }}
                         {% endif %}
