--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -57,7 +57,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">
-        {{ session['settings']['logo_file_id']|display_logo|safe }}
+        <img src="{{ ''|get_logo|safe }}" id="logo" alt="Logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
