--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -12,6 +12,11 @@ img#logo {
     height: 40px;
 }
 
+img#logo-preview {
+    max-width: 400px;
+    margin-bottom: 1em;
+}
+
 #site-name-and-version {
     position: absolute;
     right: 16px
