Admin: moved GeoNames settings to database/admin interface

--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -1,6 +1,6 @@
 <script>
     var geoNamesModule = {{ 'true' if geonames_buttons else 'false' }};
-    var geoNamesUsername = '{{ config['GEONAMES_USERNAME'] }}';
+    var geoNamesUsername = '{{ session['settings']['geonames_username'] }}';
     var thunderforestKey = '{{ config['THUNDERFOREST_KEY'] }}';
     var gisPointAll = {{ gis_data['gisPointAll']|safe }};
     var gisPointSupers = {{ gis_data['gisPointSupers']|safe }};
