--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -28,8 +28,8 @@
                     {% if 'manager'|is_authorized %}
                         {{  _('edit settings')|button(url_for('admin_settings', category='files')) }}
                     {% endif %}
-                    {{ _('file')|button(url_for('file_insert')) }}
                     {{ _('list')|button(url_for('file_index')) }}
+                    {{ _('file')|button(url_for('file_insert')) }}
                 </div>
                 <div style="float:left;">
                     {% for dir, value in writeable_dirs.items() %}
@@ -68,12 +68,12 @@
             <div class="tab-pane fade" role="tabpanel" id="tab-user">
                 <div class="toolbar">
                     {{ 'User'|manual_link }}
-                    {% if 'manager'|is_authorized and session['settings']['mail'] %}
-                        {{ _('user')|button(url_for('user_insert')) }}
-                    {% endif %}
                     {{ _('activity')|button(url_for('user_activity')) }}
-                    {% if 'manager'|is_authorized and session['settings']['mail'] %}
-                        {{ _('newsletter')|button(url_for('admin_newsletter')) }}
+                    {% if 'manager'|is_authorized %}
+                        {% if session['settings']['mail'] %}
+                            {{ _('newsletter')|button(url_for('admin_newsletter')) }}
+                        {% endif %}
+                        {{ _('user')|button(url_for('user_insert')) }}
                     {% endif %}
                 </div>
                 {{ tables.user.display('user')|safe }}
