--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -56,11 +56,13 @@
                 {% if 'manager'|is_authorized %}
                     <div style="float:left;margin-left:2em;">
                         <img src="{{ ''|get_logo|safe }}" id="logo-preview" alt="Logo" style="max-width:400px;"><br>
-                        {% if settings['logo_file_id']: %}
-                            {{ _('remove custom logo')|button(url_for('admin_index', action='remove_logo', id_=0)) }}
-                        {% else %}
-                            {{  _('choose custom logo')|button(url_for('admin_logo')) }}
-                        {% endif %}
+                        <div class="toolbar">
+                            {% if settings['logo_file_id']: %}
+                                {{ _('remove custom logo')|button(url_for('admin_index', action='remove_logo', id_=0)) }}
+                            {% else %}
+                                {{  _('choose custom logo')|button(url_for('admin_logo')) }}
+                            {% endif %}
+                        </div>
                     </div>
                 {% endif %}
                 <div style="clear:both;"></div>
