--- a/openatlas/templates/admin/newsletter.html
+++ b/openatlas/templates/admin/newsletter.html
@@ -5,8 +5,11 @@
 {% endblock %}
 {% block content %}
     <form id="newsletter-form" name="newsletter_form" method="post">
+        {{ form.csrf_token }}
         <div style="float:left;">
-            {{ form|display_form() }}
+            {{ form.subject(class_="required") }}<br><br>
+            {{ form.body(class_="required") }}<br>
+            {{ form.send(class_=config['CSS']['button']['primary']) }}
         </div>
         <div style="float:left;margin-left:1em;">
             {{ table.display()|safe }}
