Refactored display_info function

--- a/openatlas/templates/model/index.html
+++ b/openatlas/templates/model/index.html
@@ -20,13 +20,15 @@
         </p>
         <form method="post">
             {{ form.csrf_token }}
-            {% set data = [
-                (form.domain.label, form.domain|string + 'domain'|table_select_model(domain)),
-                (form.property.label, form.property|string + 'property'|table_select_model(property)),
-                (form.range.label, form.range|string + 'range'|table_select_model(range)),
-            ] %}
+            {% set data = {
+                form.domain.label: form.domain|string + 'domain'|table_select_model(domain),
+                form.property.label: form.property|string + 'property'|table_select_model(property),
+                form.range.label: form.range|string + 'range'|table_select_model(range)
+            } %}
             {{ data|display_info }}
-            <input type="submit" value="{{ _('test')|uc_first }}">
+            <div class="toolbar">
+                {{ form.test(class_=config['CSS']['button']['primary']) }}
+            </div>
         </form>
         {% if test_result %}
             <p style="margin-top:1em;">
